// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aopForStatic method should call pattern.beforeGetter and pattern.afterGetter for inhereted static getter 2`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "property": "staticGetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeGetter and pattern.afterGetter for inhereted static getter 3`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "payload": "static getter",
    "property": "staticGetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeGetter and pattern.afterGetter for inhereted static getter with multiple aspect 2`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "property": "staticGetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeGetter and pattern.afterGetter for inhereted static getter with multiple aspect 3`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticMethod": [Function],
    },
    "payload": "static getter",
    "property": "staticGetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod for inhereted static method with multiple aspect 1`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticMethod": [Function],
    },
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod for inhereted static method with multiple aspect 2`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticMethod": [Function],
    },
    "payload": "static method",
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod for own static method with multiple aspect 1`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "property": "staticMethod2",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod for own static method with multiple aspect 2`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "payload": "static method 2",
    "property": "staticMethod2",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod with multiple aspect 1`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod with multiple aspect 2`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "payload": "static method",
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeSetter and pattern.afterSetter for inhereted static setter 2`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "payload": "static setter",
    "property": "staticSetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeSetter and pattern.afterSetter for inhereted static setter 3`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "payload": "static setter",
    "property": "staticSetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should not call pattern.afterMethod for static getter which return constructable function 1`] = `undefined`;

exports[`aopForStatic method should not call pattern.beforeGetter and pattern.afterGetter for not hooked property 2`] = `undefined`;

exports[`aopForStatic method should not call pattern.beforeGetter and pattern.afterGetter for not hooked property 3`] = `undefined`;
